--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ networkx==2.8.6
 httpx==0.23.0
 scikit-learn==1.1.3
 fastapi==0.91.0
+uvicorn==0.20.0
 urllib3==1.26.14
 SQLAlchemy==2.0.3
 pymysql==1.0.2
@@ -14,4 +15,4 @@ PyYAML==6.0
 duckdb==0.6.1
 pyarrow==11.0.0
 jmespath==1.0.1
-pydot=1.4.2
+pydot==1.4.2
